style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap');

body {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    background-color: #053B50;
    scroll-behavior: smooth;
    font-family: "Montserrat", sans-serif;
    font-weight: 400;
}

li, a, button{
    font-family: "Montserrat", sans-serif;
    font-weight: 400;
    font-size: 20px;
    color: #EEEEEE;
    text-decoration: none;
}

header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 30px 10%;
    
}

.logo{
    cursor: pointer;
    
}

.nav__links{
    list-style: none;
    
}

.nav__links li {
    display: inline-block;
    padding: 0px 20px;

}

.nav__links li a {
    transition: all 0.3s ease 0s;
    
}

.nav__links li a:hover {
    color: #64CCC5;
}

#nav_bar_button {
    padding: 9px 25px;
    background-color: rgba(100, 204, 197, 1);
    border: none;
    border-radius: 50px;
    cursor: pointer;
    transition: all 0.3s ease 0s;
    outline: none;
}

#nav_bar_button:hover {
    background-color: rgba(100, 204, 197, 0.8);
}


.toggle-button {
    position: absolute;
    top: 2rem;
    right: 1rem;
    display: none;
    flex-direction: column;
    justify-content: space-between;
    width: 30px;
    height: 21px;
}

.toggle-button .bar{
    height: 3px;
    width: 100%;
    background-color: #EEEEEE;
    border-radius: 10px;
}

.mobile-header{
    font-family: "Montserrat", sans-serif;
    font-weight: 400;
    color: #EEEEEE;
    font-size: 15px;
}

.carousel-caption {
    right: 5%;       
    left: auto;      
    text-align: right;
    max-width: 50%;  
}

.carousel-caption h5 {
    font-size: 2rem; 
}

.carousel-caption p {
    font-size: 1.2rem; 
}

.carousel-item::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #053B50; 
    opacity: 0.7; 
    pointer-events: none; 
}

.carousel-inner {
    background-color: #053B50; 
}

.carousel-item img {
    width: 100%;
    max-height: 600px; 
    object-fit: cover;
    margin: 0 auto; 
}

.carousel-control-prev, .carousel-control-next {
    width: auto; 
    padding: 0 1%; 
}

.carousel-control-prev-icon, .carousel-control-next-icon {
    width: 20px; 
    height: 20px;
}

#carousel-login {
    padding: 9px 25px;
    background-color: rgba(100, 204, 197, 1);
    border: none;
    border-radius: 50px;
    cursor: pointer;
    transition: all 0.3s ease 0s;
    outline: none;
}

#carousel-login:hover {
    background-color: rgba(100, 204, 197, 0.8);
}

.section-header{
    display: flex;
    justify-content: center;
    color: #EEEEEE;
    margin: 10px 10px;
    padding: 10px 10px;
    font-size: 35px;
}

.section-sub-header{
    display: flex;
    justify-content: center;
    color: #EEEEEE;
    margin: 10px 10px;
    padding: 10px 10px;
    font-size: 20px;
}

.partner-logo {
    max-width: 5%
}

.card{
    background-color: #176B87;
}

.card-body{
    color: #EEEEEE;
}


.challenge-container {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

.item-container {
    position: relative;
    margin: 24px;
    width: 320px;
    height: 570px;
    overflow: hidden;
    background-color: #EEEEEE;
    box-shadow: 0 0 30px 5px rgba(0, 0, 0, 0.15);
    cursor: pointer;
}

.img-container,
.body-container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.img-container img {
    width: 100%;
}

.body-container {
    position: relative;
}

.overlay {
    position: relative;
    width: 100%;
    height: 400px;
    background-color: rgba(24, 83, 122, 0.6);
    opacity: 0;
    transition: height linear 0.4s, opacity linear 0.2s;
}

.item-container:hover .overlay {
    opacity: 1;
    height: 150px;
}

.event-info {
    background-color: #EEEEEE;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 8px;
}

.title,
.prize {
    color: #053B50;
    font-size: 1.2em;
    font-weight: bold;
    letter-spacing: 1px;
    margin: 12px;
}

.info-partner {
    letter-spacing: 0.5px;
    margin-bottom: 6px;
}

.separator {
    width: 20%;
    height: 6px;
    background-color: #053B50;
    margin-bottom: 16px;
}

.additional-info {
    border-top: 1px solid #EEEEEE;
    margin-top: 12px;
    padding: 28px;
    padding-bottom: 0;
}

.additional-info .info {
    font-size: 0.9em;
    margin-bottom: 20px;
    text-align: center;
}

.info i {
    color: #18537a;
    font-size: 1.1em;
    margin-right: 4px;
}

.info span {
    color: #18537a;
    font-weight: bolder;
}

.action {
    color: #fff;
    border: 3px solid #fff;
    background-color: transparent;
    position: absolute;
    top: -100px;
    left: 50%;
    transform: translateX(-50%);
    width: 60%;
    outline: none;
    cursor: pointer;
    padding: 12px;
    text-transform: uppercase;
    font-size: 1.3em;
    font-weight: bold;
    letter-spacing: 2px;
    transition: background-color 0.4s, top 0.4s;
}

.item-container:hover .action {
    top: 50px;
}

.action:hover {
    background-color: rgba(100, 204, 197, 0.2);
}

.completed-challenges {
    display: flex;
    justify-content: center;
}

#cmted_chall_btn{
    padding: 9px 25px;
    background-color: rgba(100, 204, 197, 1);
    border: none;
    border-radius: 50px;
    cursor: pointer;
    transition: all 0.3s ease 0s;
    outline: none;
}

#sec_cmted {
    display: none; 
  }
  
.show_cmpted {
    display: flex;
    justify-content: center;
}

.extended-info{
    display: none;
    background-color: #EEEEEE;
    cursor: default;
}

.extended-info {
    display: none; /* Keep this as is */
    position: fixed; /* Position it relative to the viewport */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    background-color: rgba(0, 0, 0, 0.5); /* Add a semi-transparent background */
    z-index: 10; /* Make sure it's on top of other content */
    justify-content: center;
    align-items: center;
  }
  
.modal-content {
    background-color: #fff;
    padding: 20px;
    border-radius: 5px;
    width: 90%; /* Adjust as needed */
    margin: auto; /* Center the modal content horizontally */
    cursor: default;
  }

.close-button {
    float: right;
    font-size: 30px;
    cursor: pointer;
  }

.modal-content a,
.modal-content .button {
    cursor: pointer; /* Only actual clickable items inside the modal content get a pointer cursor */
    }


.about-us{
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 50px 15px;
    background-color: #053B50;
    margin-top: 50px;
}

.about-us-text p {
    color: #EEEEEE;
}

.socials i{
    font-size: 50px;
    margin: 20px;
}

.socials i:hover{
    color: #64CCC5;
}
.abt-us-container{
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 15px;
    width: 100%;
}

.about-us-content {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
  }

  .about-us-text {
    flex: 1 1 60%; /* 60% of the container's width */
    padding-right: 20px;
  }

.about-us-photo {
    flex: 1 1 40%; /* 40% of the container's width */
    text-align: center;
}

.about-us-photo img {
    max-width: 100%;
    height: auto;
    border-radius: 10px; /* Optional: for rounded corners */
  }
  

.ranking{
    display: flex;
    justify-content: center;
}


/*Mobile version*/ 

@media (max-width: 426px) {
    .toggle-button{
        display: flex;
    }

    .nav__links{
        display: none; 
        width: 100%;
    }

    #nav_bar_button {
        display: block;
        padding: 5px 10px;
        font-size: 15px;
        width: 150px;
    }
    
    .cta{
        display: flex;
    }

    header{
        flex-direction: column;
    }

    .nav__links ul {
        flex-direction: column;
        width: 100%;
    }

    .nav__links li {
        text-align: center;
    }

    .nav__links a {
        padding: .5rem .5rem;
        line-height: 40px;
        font-size: 20px;
    }

    .nav__links.active{
        display: flex;
        flex-direction: column;
        align-items: flex-end;
        margin: 20px;
    }
   
    .logo{
    width: 50px;
    height: auto;
   }

   .carousel-caption {
    display: block !important;
    }

    .carousel-caption h5 {
    font-size: 15px; 
    }

    .carousel-caption p {
    font-size: 10px; 
    }

    #carousel-login {
        padding: 5px 15px;
        font-size: 10px; 
        margin-left: 100px;
    }

    .section-header {
        font-size: 25px;
    }
    
    .section-sub-header{
        font-size: 10px;
        padding: 0;
    }

    .partner-logo {
        max-width: 15%
    }
    
}


/*Tablet version*/ 
@media (min-width: 768px) and (max-width: 1024px) {
    
    header{
        display: flex;
        justify-content: flex-end;
        padding: 10px;
    }

    .nav__links li a{
        font-size: 12px;
        padding: 0px;
    }

    #nav_bar_button {
        padding: 5px 15px; 
        font-size: 10px;  
    }

    .logo, .logo a {
        width: 50px; /* Adjust to your desired size */
        height: auto; /* This maintains the aspect ratio */
        display: inline-block; /* Ensures it doesn't force a new line */
    }

    .partner-logo {
        max-width: 10%
    }

}

/*Laptop version*/ 
@media (min-width: 1024px) and (max-width: 1440px) {
    header{
        display: flex;
        justify-content: flex-end;
        padding: 10px;
        margin: 20px;
        
    }

    .nav__links li a{
        font-size: 16px;
        padding: 5px;
    }

    #nav_bar_button {
        padding: 10px 15px; 
        font-size: 15px;  
    }
}

